@@ -7,6 +7,12 @@
     <kcfgfile arg="true"/>
     
     <group name="General"> 
+
+        <entry name="UpdateIntervalMsek" type="Int"> 
+            <label>Update Interval between new information will be retrieved from the battery.</label> 
+            <default>3000</default>
+        </entry> 
+
         <entry name="PowerMeterBelowGauge" type="Bool"> 
             <label>Display the power consumption below the battery gauge.</label> 
             <default>true</default>
